--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  flex-direction: column;
+  gap: 50px;
+  padding-top: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+
+.playArea
+{
+  width: 600px;
+  height: 400px;
+  position: relative;
+  border: 1px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dot
+{
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  position: absolute;
+}
+
+.clickTable
+{
+  width: 600px;
+ 
+  height: auto;
+  border: 1px solid black;
+  border-collapse: collapse;
+
+}
+
+.clickTable>tr>*
+{
+  border: 1px solid black;
+  text-align: center;
+  font-size: 19px;
+}
+
+.header
+{
+  width: 600px;
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 100px;
+}
+.btns
+{
+  width: 100%;
+  display: flex;
+ justify-content: space-between;
+
+  align-items: center;
+}
+
+.btns>button
+{
+  height: 30px;
+  background: transparent;
+  width: 80px;
 }
